--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-5.36MB/s(Youtube:不良林), server: jgwdb3.gaox.ml, port: 443, type: trojan, password: 8d2d5953-d649-4034-94f2-72f2df2623da, sni: jgwdb3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.45MB/s(Youtube:不良林), server: 212.81.47.16, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-1.52MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇺🇸 美国-570.5KB/s(Youtube:不良林), server: 104.166.135.10, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: 104.166.135.10}}
+  - {name: 🇷🇺 俄罗斯联邦-2.74MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1c08f35bdafe74a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
   - {name: 🇨🇳 中国-9.09MB/s(Youtube:不良林), server: 116.129.254.29, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.46MB/s(Youtube:不良林), server: au2-2.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-2.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-1.90MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
-  - {name: 🇨🇳 中国-7.44MB/s(Youtube:不良林), server: sha-cu-001.omo-m0m.com, port: 5602, type: trojan, password: 9d6a601d-8593-39b5-8861-86ac78c0c5ad, sni: sha-cu-001.omo-m0m.com, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.07MB/s(Youtube:不良林), server: 212.81.47.18, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.28MB/s(Youtube:不良林), server: 212.81.47.15, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
   - {name: 🇺🇸 美国-1.17MB/s(Youtube:不良林), server: au2-1.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-1.nigirocloud.com, skip-cert-verify: true}
   - {name: 🇬🇧 英国-3.24MB/s(Youtube:不良林), server: 152.89.210.105, port: 9038, type: ss, cipher: aes-256-cfb, password: gYCYXfkUQEs2TaJQ}
   - {name: 🇬🇧 英国-2.55MB/s(Youtube:不良林), server: 152.89.210.105, port: 9042, type: ss, cipher: aes-256-cfb, password: S7KwUu7yBy58S3Ga}
+  - {name: 🇰🇷 韩国-7.61MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-1.83MB/s(Youtube:不良林), server: 152.89.210.105, port: 9045, type: ss, cipher: aes-256-cfb, password: Lp27rqyJq72bZsqX}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-5.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.45MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-570.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.74MB/s(Youtube:不良林)
       - 🇨🇳 中国-9.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.46MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.28MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
       - 🇬🇧 英国-3.24MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.55MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-7.61MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.83MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-5.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.45MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-570.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.74MB/s(Youtube:不良林)
       - 🇨🇳 中国-9.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.46MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.28MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
       - 🇬🇧 英国-3.24MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.55MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-7.61MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.83MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-5.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.45MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-570.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.74MB/s(Youtube:不良林)
       - 🇨🇳 中国-9.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.46MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.28MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
       - 🇬🇧 英国-3.24MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.55MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-7.61MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.83MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-5.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.45MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-570.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.74MB/s(Youtube:不良林)
       - 🇨🇳 中国-9.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.46MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.28MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
       - 🇬🇧 英国-3.24MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.55MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-7.61MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.83MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-5.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.45MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-570.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.74MB/s(Youtube:不良林)
       - 🇨🇳 中国-9.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.46MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.28MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
       - 🇬🇧 英国-3.24MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.55MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-7.61MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.83MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-5.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.45MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-570.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.74MB/s(Youtube:不良林)
       - 🇨🇳 中国-9.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.46MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.28MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
       - 🇬🇧 英国-3.24MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.55MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-7.61MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.83MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-5.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.45MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-570.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.74MB/s(Youtube:不良林)
       - 🇨🇳 中国-9.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.46MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.28MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
       - 🇬🇧 英国-3.24MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.55MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-7.61MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.83MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
