--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇰🇷 韩国-1.05MB/s(Youtube:不良林), server: jgw2.gaox.ml, port: 443, type: trojan, password: f2117e99-9b6e-47fd-b0a9-634a0b15b998, sni: jgw2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.53MB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇭🇰 香港-2.67MB/s(Youtube:不良林), server: 2.tiantang.cf, port: 59195, type: trojan, password: pA52tFTlGZ, sni: 2.tiantang.cf, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-1.52MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
-  - {name: 🇺🇸 美国-5.45MB/s(Youtube:不良林), server: 212.81.47.16, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-3.62MB/s(Youtube:不良林), server: 178.128.89.153, port: 80, type: vmess, uuid: d5fcc069-5888-45c1-81c5-d2f3074f0d3e, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /kvw0870h/, ws-headers: {Host: 178.128.89.153}}
-  - {name: 🇨🇦 加拿大-3.63MB/s(Youtube:不良林), server: 147.182.151.24, port: 20110, type: ss, cipher: aes-256-cfb, password: f5e0ecc4e6b84a668ee9ed98e0a30ca9}
-  - {name: 🇺🇸 美国-2.67MB/s(Youtube:不良林), server: ehez.dingzige.gq, port: 80, type: vmess, uuid: 6a6a6771-b885-4e99-a959-47d4107815d1, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /dingzi, ws-headers: {Host: ehez.dingzige.gq}}
-  - {name: 🇺🇸 美国-6.89MB/s(Youtube:不良林), server: cc.tianxiedaiweige.tk, port: 443, type: trojan, password: 662dde24-c50c-4011-82b0-5c306afc56f2, sni: cc.tianxiedaiweige.tk, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.71MB/s(Youtube:不良林), server: xjp.ziqiyun.xyz, port: 443, type: trojan, password: 7b561e94-42f3-4f92-979c-4cf97c328025, sni: xjp.ziqiyun.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.55MB/s(Youtube:不良林), server: 107.167.24.6, port: 17001, type: trojan, password: d4e9e6bb-daa4-44ed-aa29-d1b8d00ba7d6, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.10MB/s(Youtube:不良林), server: zgao.xyz, port: 443, type: trojan, password: nsTcmFBI, sni: zgao.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.13MB/s(Youtube:不良林), server: jgwdb2.gaox.ml, port: 443, type: trojan, password: c19d1432-8b3e-4818-8837-3d160cf65908, sni: jgwdb2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-2.30MB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: cd39f62aed7b90f6, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-2.33MB/s(Youtube:不良林), server: 147.182.151.24, port: 20110, type: ss, cipher: aes-256-cfb, password: f5e0ecc4e6b84a668ee9ed98e0a30ca9}
+  - {name: 🇬🇧 英国-2.41MB/s(Youtube:不良林), server: 152.89.210.105, port: 9056, type: ss, cipher: aes-256-cfb, password: rNBfNuuANFCAk7KB}
+  - {name: 🇬🇧 英国-1.96MB/s(Youtube:不良林), server: 152.89.210.105, port: 9084, type: ss, cipher: aes-256-cfb, password: c3NtHJ5ujV2tGDfj}
+  - {name: 🇬🇧 英国-2.31MB/s(Youtube:不良林), server: 152.89.210.105, port: 9037, type: ss, cipher: aes-256-cfb, password: TN2YqghxeFDKZfLU}
+  - {name: 🇺🇸 美国-4.68MB/s(Youtube:不良林), server: 212.81.47.13, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.51MB/s(Youtube:不良林), server: au2-3.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-3.nigirocloud.com, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇰🇷 韩国-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.53MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.67MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.45MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.62MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-6.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.13MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.30MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.33MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.41MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.96MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇰🇷 韩国-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.53MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.67MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.45MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.62MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-6.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.13MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.30MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.33MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.41MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.96MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇰🇷 韩国-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.53MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.67MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.45MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.62MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-6.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.13MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.30MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.33MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.41MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.96MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-2.67MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇰🇷 韩国-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.53MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.67MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.45MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.62MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-6.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.13MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.30MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.33MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.41MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.96MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇰🇷 韩国-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.53MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.67MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.45MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.62MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-6.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.13MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.30MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.33MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.41MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.96MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇰🇷 韩国-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.53MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.67MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.45MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.62MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-6.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.13MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.30MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.33MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.41MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.96MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇰🇷 韩国-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.53MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.67MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.45MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.62MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-6.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.13MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.30MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.33MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.41MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.96MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
