--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-5.55MB/s(Youtube:不良林), server: 107.167.24.6, port: 17001, type: trojan, password: d4e9e6bb-daa4-44ed-aa29-d1b8d00ba7d6, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.10MB/s(Youtube:不良林), server: zgao.xyz, port: 443, type: trojan, password: nsTcmFBI, sni: zgao.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.13MB/s(Youtube:不良林), server: jgwdb2.gaox.ml, port: 443, type: trojan, password: c19d1432-8b3e-4818-8837-3d160cf65908, sni: jgwdb2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-2.30MB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: cd39f62aed7b90f6, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-2.33MB/s(Youtube:不良林), server: 147.182.151.24, port: 20110, type: ss, cipher: aes-256-cfb, password: f5e0ecc4e6b84a668ee9ed98e0a30ca9}
-  - {name: 🇬🇧 英国-2.41MB/s(Youtube:不良林), server: 152.89.210.105, port: 9056, type: ss, cipher: aes-256-cfb, password: rNBfNuuANFCAk7KB}
   - {name: 🇬🇧 英国-1.96MB/s(Youtube:不良林), server: 152.89.210.105, port: 9084, type: ss, cipher: aes-256-cfb, password: c3NtHJ5ujV2tGDfj}
-  - {name: 🇬🇧 英国-2.31MB/s(Youtube:不良林), server: 152.89.210.105, port: 9037, type: ss, cipher: aes-256-cfb, password: TN2YqghxeFDKZfLU}
-  - {name: 🇺🇸 美国-4.68MB/s(Youtube:不良林), server: 212.81.47.13, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.51MB/s(Youtube:不良林), server: au2-3.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-3.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-1.01MB/s(Youtube:不良林), server: 157.230.41.220, port: 29596, type: ss, cipher: aes-256-cfb, password: e6c1cf51375c407d92d110881a825acb}
+  - {name: 🇺🇸 美国-396.5KB/s(Youtube:不良林), server: 104.166.135.10, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: 104.166.135.10}}
+  - {name: 🇫🇷 法国-2.85MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇷🇺 俄罗斯联邦-2.78MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1c08f35bdafe74a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
+  - {name: 🇺🇸 美国-5.30MB/s(Youtube:不良林), server: 212.81.47.15, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.81MB/s(Youtube:不良林), server: au2-2.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-2.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.92MB/s(Youtube:不良林), server: 212.81.47.17, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-2.51MB/s(Youtube:不良林), server: 152.89.210.105, port: 9032, type: ss, cipher: aes-256-cfb, password: UWZQeLRWnkqgkseq}
+  - {name: 🇨🇳 台湾-2.84MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.13MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.30MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.33MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.41MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.96MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-396.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.85MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.92MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.51MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.84MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-5.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.13MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.30MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.33MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.41MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.96MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-396.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.85MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.92MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.51MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.84MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.13MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.30MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.33MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.41MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.96MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-396.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.85MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.92MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.51MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.84MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-2.84MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-5.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.13MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.30MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.33MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.41MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.96MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-396.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.85MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.92MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.51MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.84MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.13MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.30MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.33MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.41MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.96MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-396.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.85MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.92MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.51MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.84MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-5.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.13MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.30MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.33MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.41MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.96MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-396.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.85MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.92MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.51MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.84MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-5.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.13MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.30MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.33MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.41MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.96MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-396.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.85MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.92MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.51MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.84MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
